objects/PT_Program__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airbus_MROD_Approval_Status__c</fullName>
        <label>Airbus MROD Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Identifier_Field__c</fullName>
        <description>User Selection to determine which field on the aircraft record will be used as the aircraft identifier</description>
        <inlineHelpText>User Selection to determine which field on the aircraft record will be used as the aircraft identifier</inlineHelpText>
        <label>Aircraft Identifier Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Block Number</fullName>
                </value>
                <value>
                    <fullName>Fleet Number</fullName>
                </value>
                <value>
                    <fullName>Line Number</fullName>
                </value>
                <value>
                    <fullName>Serial Number</fullName>
                </value>
                <value>
                    <fullName>Tail Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_History_Type__c</fullName>
        <label>Approval History Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSFE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Service Field Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_Requirement__c</fullName>
        <label>Certification Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EASA</fullName>
                </value>
                <value>
                    <fullName>FAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Program__c</fullName>
        <label>Core Program</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Opportunity__c</fullName>
        <formula>HYPERLINK(&#39;/&#39; +  Sales_Opportunity__r.L2I_Parent_Opportunity__c ,  Sales_Opportunity__r.L2I_Parent_Opportunity__r.Name, &#39;_self&#39; )</formula>
        <label>Deal Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_PMA_Date__c</fullName>
        <label>Estimated PMA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expedite_MROD_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set in the MROD Approval flow based on Assets needing to be expedited</description>
        <label>Expedite MROD Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Airbus__c</fullName>
        <formula>IF ( OR(PT_Program_Type__c == &#39;Production-AIRBUS&#39;, PT_Program_Type__c == &#39;Production-Airbus&#39;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Airbus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Approval_Process_Type__c</fullName>
        <label>Latest Approval Process Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_PPL_Revision_Rollup__c</fullName>
        <label>Latest PPL Revision Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MROD_Approval_Program_Name__c</fullName>
        <description>Used in MROD Rev Approval Email Templates.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MROD Approval Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MROD_Approval_Status__c</fullName>
        <label>MROD Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MROD_Approval_Step__c</fullName>
        <label>MROD Approval Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MROD_Approval_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MROD Approval Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MROD_Latest_Approval_Questions__c</fullName>
        <label>MROD Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MROD_Revision__c</fullName>
        <label>MROD Revision</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <displayFormat>PRG-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ODA_Project_Number__c</fullName>
        <label>ODA Project Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs (Operator)</relationshipLabel>
        <relationshipName>Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs (Owner)</relationshipLabel>
        <relationshipName>Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAC_Airbus_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PAC Airbus Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProgramsAirbusMgr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMA_Requirement__c</fullName>
        <label>PMA Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C of C Only</fullName>
                </value>
                <value>
                    <fullName>PMA by specific OEM</fullName>
                </value>
                <value>
                    <fullName>PMA on Any A/C</fullName>
                </value>
                <value>
                    <fullName>PMA on base A/C Model</fullName>
                </value>
                <value>
                    <fullName>PMA on specific A/C Model</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMO_Group__c</fullName>
        <label>xxx PMO Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMO_Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Needed in the MROD Approval process</description>
        <label>PMO Regional Director User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMO_Sub_Group__c</fullName>
        <label>xxx PMO Sub Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMO_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NA4-VIP</fullName>
                </value>
                <value>
                    <fullName>North America 1</fullName>
                </value>
                <value>
                    <fullName>North America 3</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Asia 1</fullName>
                </value>
                <value>
                    <fullName>Asia 3</fullName>
                </value>
                <value>
                    <fullName>Asia Major</fullName>
                </value>
                <value>
                    <fullName>Asia Minor</fullName>
                </value>
                <value>
                    <fullName>Asia-VIP</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Europe 1</fullName>
                </value>
                <value>
                    <fullName>Europe 2</fullName>
                </value>
                <value>
                    <fullName>ME-Central Region</fullName>
                </value>
                <value>
                    <fullName>ME-Eastern Region</fullName>
                </value>
                <value>
                    <fullName>ME-Emirates Region</fullName>
                </value>
                <value>
                    <fullName>ME-Etihad Region</fullName>
                </value>
                <value>
                    <fullName>ME-Middle East</fullName>
                </value>
                <value>
                    <fullName>ME-Qatar/GCS</fullName>
                </value>
                <value>
                    <fullName>ME-VIP</fullName>
                </value>
                <value>
                    <fullName>ME-Western Region</fullName>
                </value>
                <value>
                    <fullName>Middle East 1</fullName>
                </value>
                <value>
                    <fullName>VIP Group</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PM_RM_RD__c</fullName>
        <label>Program Mgr, Regional Mgr, Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Provider_Notes__c</fullName>
        <inlineHelpText>Reason for the Secondary Provider</inlineHelpText>
        <label>PO Provider Notes</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs (PO Provider)</relationshipLabel>
        <relationshipName>Programs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Aircraft_Type__c</fullName>
        <description>Aircraft type retrieved from the Opportunity</description>
        <formula>Sales_Opportunity__r.L2I_AircraftType__c</formula>
        <label>Aircraft Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Approval_History__c</fullName>
        <formula>HYPERLINK(&#39;/lightning/r/ProcessInstanceHistory/&#39;+ Id + &#39;/related/ProcessSteps/view&#39;, &#39;MROD Approvals&#39; ,&#39;_self&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to MROD Approvals</inlineHelpText>
        <label>Approval History</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_First_Aircraft_Delivery__c</fullName>
        <inlineHelpText>Date that the first aircraft of this program has been delivered</inlineHelpText>
        <label>First Aircraft Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Legacy_Program_Id__c</fullName>
        <description>Program Table Program ID field</description>
        <externalId>true</externalId>
        <inlineHelpText>Program Table Program ID field</inlineHelpText>
        <label>Legacy Program ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_MROD_Approval_Steps__c</fullName>
        <formula>HYPERLINK(&#39;/lightning/r/ProcessInstanceHistory/&#39;+Id+&#39;/related/ProcessSteps/view&#39;, &#39;Approvals&#39; , &#39;_self&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MROD Approval Steps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Operator_Payment_Terms__c</fullName>
        <formula>Operator__r.L2I_Payment_Term_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operator Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Owner_Payment_Terms__c</fullName>
        <formula>Owner__r.L2I_Payment_Term_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_PMO_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PMO Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PT_PMO_Groups__c.Group_Type__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PT_PMO_Groups__c</referenceTo>
        <relationshipLabel>PMO Group Programs</relationshipLabel>
        <relationshipName>PMOGroupPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_PMO_Regional_Director__c</fullName>
        <formula>PT_PMO_Group__r.Owner:User.FirstName + &quot; &quot; +  PT_PMO_Group__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PMO Regional Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_PMO_SubGroup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PMO Sub Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PT_PMO_Groups__c.Group_Type__c</field>
                <operation>equals</operation>
                <value>Sub Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PT_PMO_Groups__c</referenceTo>
        <relationshipLabel>Programs (PMO Sub Group)</relationshipLabel>
        <relationshipName>PMOSubGroupPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_POProvider_Payment_Terms__c</fullName>
        <formula>PO_Provider__r.L2I_Payment_Term_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Provider Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Part_List_Report_url__c</fullName>
        <formula>HYPERLINK(
&#39;https://panacorp--devr4.lightning.force.com/lightning/r/Report/00O21000000UY92EAG/view?fv2=&#39; + Name__c
, &#39;Parts Changes&#39; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to outstanding parts list changes on this program</inlineHelpText>
        <label>Part List Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Pending_MRODs__c</fullName>
        <formula>if(isActiveMrodApproval__c,
&quot;Pending &quot; + Latest_Approval_Process_Type__c + &quot;s&quot;,
&quot;No Approval Pending&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRODs Pending Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Primary_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Price List</label>
        <referenceTo>PT_PriceList__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Primary_System_Type__c</fullName>
        <formula>Sales_Opportunity__r.L2I_Primary_System_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary System Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Principal_Program_Manager__c</fullName>
        <formula>PT_PMO_SubGroup__r.Owner:User.FirstName + &quot; &quot; +  PT_PMO_SubGroup__r.Owner:User.LastName</formula>
        <label>Regional Manager (RM)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Program_Aircraft_IDs__c</fullName>
        <label>Program Aircraft IDs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_Program_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Program Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Program_Number_Alt__c</fullName>
        <description>Used in CCC formula on Asset object</description>
        <label>Program Number Alt</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Program_Type_Lead__c</fullName>
        <formula>IF(UPPER(PT_Program_Type__c) = &quot;PRODUCTION-BOEING&quot;
  ,7
  ,IF(UPPER(PT_Program_Type__c) = &quot;PRODUCTION-AIRBUS&quot;
    ,10
    ,14
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lead time offset calculated by the Program Type</inlineHelpText>
        <label>Program_Type_Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Program_Type__c</fullName>
        <formula>Text(Sales_Opportunity__r.L2I_Fit_Type__c) + if(
Text(Sales_Opportunity__r.L2I_Fit_Type__c) = &#39;Production&#39;,
&#39;-&#39; +  Sales_Opportunity__r.L2I_Aircraft_Type__r.L2I_Make__c
,&#39;&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Special_Project__c</fullName>
        <label>Special Project</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Initiative</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Special_QA_Instruction__c</fullName>
        <formula>IF(UPPER(PT_Program_Type__c) = &quot;PRODUCTION-AIRBUS&quot;, &quot;Highest Cert Avail.&quot;, 
    IF(UPPER(PT_Program_Type__c) = &quot;PRODUCTION-EMBRAER&quot;, &quot;Highest Cert Avail.&quot;, 
       IF(BEGINS(UPPER(PT_Program_Type__c), &quot;PRODUCTION&quot;), &quot;COC&quot;, 
          IF(ISPICKVAL(STC_Applicant__c, &quot;Airbus&quot;), &quot;Highest Cert Avail.&quot;, 
             IF(ISPICKVAL(PMA_Requirement__c, &quot;C of C Only&quot;), &quot;COC&quot;,
                IF(ISPICKVAL(PMA_Requirement__c, &quot;PMA on Any A/C&quot;), &quot;PMA Any A/C&quot;,
                   IF(ISPICKVAL(PMA_Requirement__c, &quot;PMA on specific A/C Model&quot;), &quot;PMA A/C Specific&quot;, &quot;&quot;)
                   )
                )
             )
          )                  
       )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special QA Instruction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Sub_System_Type__c</fullName>
        <label>Sub System Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sub_System_Type_Picklist_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_isActive__c</fullName>
        <inlineHelpText>Active state of the Program</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Principal_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Needed for MROD Approval process</description>
        <label>Principal Program Manager User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramManagerName__c</fullName>
        <formula>Program_Manager__r.FirstName + &#39; &#39; + Program_Manager__r.LastName</formula>
        <label>Program Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Method__c</fullName>
        <label>Program Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PMO</fullName>
                    <default>true</default>
                    <label>PMO</label>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Number__c</fullName>
        <externalId>true</externalId>
        <label>Program Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <description>as of 8/5/20 not being used should be removed.</description>
        <label>xxx Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Combination</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Production-Airbus</fullName>
                </value>
                <value>
                    <fullName>Production-Boeing</fullName>
                </value>
                <value>
                    <fullName>Production-Bombardier</fullName>
                </value>
                <value>
                    <fullName>Production-COMAC</fullName>
                </value>
                <value>
                    <fullName>Production-Embraer</fullName>
                </value>
                <value>
                    <fullName>Production-Mitsubishi</fullName>
                </value>
                <value>
                    <fullName>Retrofit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Server__c</fullName>
        <label>Schedule</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>STC_Applicant__c</fullName>
        <label>STC Applicant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(AES) Astronics</fullName>
                </value>
                <value>
                    <fullName>(BCAG) Boeing Comercial Aircraft Group</fullName>
                </value>
                <value>
                    <fullName>(BCAS) Boeing Comercial Aircraft Service</fullName>
                </value>
                <value>
                    <fullName>(BCAS) Boeing Comercial Aircraft Services</fullName>
                </value>
                <value>
                    <fullName>(GTI) GreenPoint Technologies Inc.</fullName>
                </value>
                <value>
                    <fullName>(SRT) SR Technics</fullName>
                </value>
                <value>
                    <fullName>(ZNAT) Zodiac Nortwest Aerospace Technologies</fullName>
                </value>
                <value>
                    <fullName>AAR Aircraft Services</fullName>
                </value>
                <value>
                    <fullName>ACJC</fullName>
                </value>
                <value>
                    <fullName>AEC</fullName>
                </value>
                <value>
                    <fullName>AEROMOBILE</fullName>
                </value>
                <value>
                    <fullName>AMAC</fullName>
                </value>
                <value>
                    <fullName>AMECO Beijing- HARDWARE ONLY</fullName>
                </value>
                <value>
                    <fullName>Aercocare</fullName>
                </value>
                <value>
                    <fullName>Aeroconseil</fullName>
                </value>
                <value>
                    <fullName>Aerodec</fullName>
                </value>
                <value>
                    <fullName>Air Berlin Technic (ABT)</fullName>
                </value>
                <value>
                    <fullName>Air France</fullName>
                </value>
                <value>
                    <fullName>Airbus</fullName>
                </value>
                <value>
                    <fullName>Airbus Service Bulletin</fullName>
                </value>
                <value>
                    <fullName>American Airlines</fullName>
                </value>
                <value>
                    <fullName>Armstrong</fullName>
                </value>
                <value>
                    <fullName>Associated Air Center</fullName>
                </value>
                <value>
                    <fullName>B/E Flight Structures (FSI)</fullName>
                </value>
                <value>
                    <fullName>BOEING GS</fullName>
                </value>
                <value>
                    <fullName>BOMBARDIER AEROSPACE</fullName>
                </value>
                <value>
                    <fullName>DELTA</fullName>
                </value>
                <value>
                    <fullName>Delta Engineering</fullName>
                </value>
                <value>
                    <fullName>EASA</fullName>
                </value>
                <value>
                    <fullName>EGAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STC_Date__c</fullName>
        <label>STC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_PO_Provider_Status__c</fullName>
        <formula>Secondary_PO_Provider__r.L2I_Payment_Term_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary PO Provider Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_PO_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary PO Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs (Secondary PO Provider)</relationshipLabel>
        <relationshipName>Programs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Approval_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Approval Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Teamforge__c</fullName>
        <label>Workspace</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isActiveMrodApproval__c</fullName>
        <description>Indicator that program is locked for an approval</description>
        <formula>OR(ISPICKVAL(MROD_Approval_Status__c, &#39;Pending&#39;),ISPICKVAL( Airbus_MROD_Approval_Status__c , &#39;Pending&#39;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator that program is locked for an approval</inlineHelpText>
        <label>Program in MROD Approval</label>
        <type>Checkbox</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>Active_Programs</fullName>
        <columns>NAME</columns>
        <columns>Sales_Opportunity__c</columns>
        <columns>PT_Program_Type__c</columns>
        <columns>Operator__c</columns>
        <columns>PO_Provider__c</columns>
        <columns>PM_RM_RD__c</columns>
        <columns>Program_Administrator__c</columns>
        <columns>Order_Administrator__c</columns>
        <columns>MROD_Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PT_Program__c.Production,PT_Program__c.Retrofit</value>
        </filters>
        <label>Active Programs</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Opportunity__c</columns>
        <columns>PT_Program_Type__c</columns>
        <columns>Operator__c</columns>
        <columns>PO_Provider__c</columns>
        <columns>Program_Manager__c</columns>
        <columns>PM_RM_RD__c</columns>
        <columns>Program_Administrator__c</columns>
        <columns>Order_Administrator__c</columns>
        <columns>MROD_Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Programs</fullName>
        <columns>NAME</columns>
        <columns>Sales_Opportunity__c</columns>
        <columns>PT_Program_Type__c</columns>
        <columns>Operator__c</columns>
        <columns>PO_Provider__c</columns>
        <columns>PM_RM_RD__c</columns>
        <columns>Program_Administrator__c</columns>
        <columns>Order_Administrator__c</columns>
        <columns>MROD_Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PT_Program__c.Inactive</value>
        </filters>
        <label>Inactive Programs</label>
    </listViews>
</CustomObject>